Stabilize Mega-Milestone 7 reports